--- a/holly.html
+++ b/holly.html
@@ -1,4 +1,6 @@
 <html>
+  <head>
   <title>Why does she hide</title>
+  </head>
   <img src="https://www.baltimoresun.com/resizer/pnXudkpDLSwSpfj6AKmffT47fGc=/415x277/top/cloudfront-us-east-1.images.arcpublishing.com/tronc/DYG2E5ERHRBKZFCL4TOCOECY5E.jpg" >
 </html>
